# sherpa-technical-task-base

./: .gitignore  Explanations.md  README.md  package-lock.json  package.json
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
backend/src/: main.py  settings.py
backend/src/api/: chat.py  documents.py  health.py
backend/src/models/: chat.py  database.py  documents.py
backend/src/services/: chat_service.py  openai_client.py  pdf_loader.py  rag.py  vector_store.py  web_search.py
frontend/: Dockerfile  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  types.ts  utils.ts
frontend/src/components/: ChatBubble.tsx  Sidebar.tsx  SourcesTable.tsx
frontend/src/components/ui/: scroll-area.tsx  sheet.tsx
frontend/src/hooks/: useChatStream.ts
frontend/src/pages/: ChatPage.tsx  UploadPage.tsx
frontend/src/sse/: sse.ts
frontend/src/utils/: markdown.tsx
